github/ci: Find LLVM installation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
           brew install llvm
       - name: Build on ${{ matrix.os }}
         run: |
+          find / -name llvm-config
+          find / -name Symbolize.h
           ./waf configure
           ./waf
           sudo ./waf install
