github/ci: Try to find Symbolize.h

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,7 @@ jobs:
           brew install llvm
       - name: Build on ${{ matrix.os }}
         run: |
-          find / -name llvm-config
-          find / -name Symbolize.h
+          find /System/Volumes/Data/usr/local/Cellar -name Symbolize.h
           ./waf configure
           ./waf
           sudo ./waf install
